[gd_scene load_steps=8 format=3 uid="uid://fh5l056tw50w"]

[ext_resource type="Script" uid="uid://dy1h2cuj3pdu1" path="res://scenes/menus/settings.gd" id="1_del6v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqt6j"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_del6v"]
font_size = 36

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iqt6j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_del6v"]
bg_color = Color(1, 0.784314, 0.866667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erjg3"]
bg_color = Color(1, 0.686275, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7wif"]
bg_color = Color(0.803922, 0.705882, 0.858824, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_del6v")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iqt6j")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.333
anchor_right = 0.5
anchor_bottom = 0.333
offset_left = -166.0
offset_top = -24.88
offset_right = 166.0
offset_bottom = 25.12
grow_horizontal = 2
grow_vertical = 2
text = "Pick your difficulty:"
label_settings = SubResource("LabelSettings_del6v")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.666
anchor_right = 0.5
anchor_bottom = 0.666
offset_left = -196.0
offset_top = -31.5
offset_right = 196.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Easy" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_iqt6j")
theme_override_styles/hover = SubResource("StyleBoxFlat_del6v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_erjg3")
theme_override_styles/normal = SubResource("StyleBoxFlat_e7wif")
text = "easy"

[node name="Medium" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_iqt6j")
theme_override_styles/hover = SubResource("StyleBoxFlat_del6v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_erjg3")
theme_override_styles/normal = SubResource("StyleBoxFlat_e7wif")
text = "medium"

[node name="Hard" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_iqt6j")
theme_override_styles/hover = SubResource("StyleBoxFlat_del6v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_erjg3")
theme_override_styles/normal = SubResource("StyleBoxFlat_e7wif")
text = "hard"

[connection signal="pressed" from="HBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="HBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="HBoxContainer/Hard" to="." method="_on_hard_pressed"]
